--- a/.github/workflows/exemplo.yaml
+++ b/.github/workflows/exemplo.yaml
@@ -14,4 +14,4 @@ jobs:
       uses: github/super-linter@v3.14.5
       env:
             DEFAULT_BRANCH: main
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
