--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,10 +23,7 @@ jobs:
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      matrix:
-        runner: [ self-hosted, ubuntu-latest ]
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
