--- a/.github/workflows/exemplo.yaml
+++ b/.github/workflows/exemplo.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   super-lint:
     name: Lint code base
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
